2003-08-05  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlSchema.cs: Set IsCompiled to true after compiling.
	  In Compile(): ignore included schemas that do not have a value
	  in SchemaLocation. It means that FindElement can return null
	  if the referred schema was ignored. Added check for that case.
	  Compile schema after reading it.
	* XmlSchemaCollection.cs: The targetNamespace of a schema may
	  be null. Make XmlSchemaCollection work for this case.
	* BuiltInDataType.cs, XmlSchemaDataType.cs: added new primitive
	  types: float, base64Binary, boolean.

2003-08-02  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlSchema.cs :
	  - Changed missingElementTypeRefs from Hashtable to ArrayList.
	  - Added internal XmlSchemas for keeping imported schemas.
	  - Added private Compile() that takes the original rootSchema and
	    schema location stack for nested inclusion check.
	  - Added basic xs:import and xs:include support.
	  - Compile() is now aware of included XmlSchemaObject items.
	  - Changed Compile() to fill missing elements' types and that of
	    referencing elements.
	  - Read() now adds SourceUri property (although only to itself).
	* XmlSchemaCollection.cs : Implemented Add().
	* XmlSchemaCollectionEnumerator.cs :
	  Changed .ctor() to use schema collection as its argument.
	  Fixed Current to return hashtable's Value, instead of Current 
	  (which returns DictionaryEntry).
	* XmlSchemaComplexType.cs :
	  Added internal static AnyType.
	  Compile() is now searches for its base type into other schemas.
	* XmlSchemaElement.cs : anyType is supported.
	  It now searches for type information after Compile().
	  SetReferedElementInfo() is now changed to SetSchemaType().
	* XmlSchemaObjectTable.cs :
	  It had problems similar to schema collection. Now it uses internal
	  class XmlSchemaObjectTableEnumerator to support GetEnumerator().
	* XmlSchemaParticle.cs : added internal class XmlSchemaParticleEmpty
	  and internal static Empty.
