@@ -112,6 +112,7 @@ namespace Mono.Xml.Schema
 	{
 		internal XsdToken ()
 		{
+			this.WhitespaceValue = XsdWhitespaceFacet.Collapse;
 		}
 
 		public override XmlTokenizedType TokenizedType {
@@ -176,7 +177,11 @@ namespace Mono.Xml.Schema
 			get { return typeof (string []); }
 		}
 
-		// ParseValue () method is as same as that of xs:string
+		readonly char [] whitespaceArray = new char [] {' '};
+		public override object ParseValue (string value, XmlNameTable nt, XmlNamespaceManager nsmgr)
+		{
+			return this.Normalize (value).Split (whitespaceArray);
+		}
 	}
 
 	// xs:Name
@@ -307,7 +312,11 @@ namespace Mono.Xml.Schema
 			get { return typeof (string []); }
 		}
 
-		// ParseValue () method is as same as that of xs:string
+		readonly char [] whitespaceArray = new char [] {' '};
+		public override object ParseValue (string value, XmlNameTable nt, XmlNamespaceManager nsmgr)
+		{
+			return this.Normalize (value).Split (whitespaceArray);
+		}
 	}
 
 	// xs:NOTATION
